Resolved merge conflict

--- a/app/src/components/PlotWeatherData/WeatherPlot.css
+++ b/app/src/components/PlotWeatherData/WeatherPlot.css
@@ -1,11 +1,7 @@
-/*.weather-plot {*/
-/*    height: 200px;*/
-/*    width: 100%;*/
-/*    max-width: 320px;*/
-/*    background-color: var(--accent-color-light);*/
-/*    margin-bottom: 32px;*/
-/*}*/
-
-/*.tempChart {*/
-/*    width: 300px;*/
-/*}*/
+.weather-plot {
+    height: 200px;
+    width: 100%;
+    max-width: 320px;
+    background-color: var(--neutral-color-xlight);
+    margin-bottom: 32px;
+}
