--- a/app/src/components/DisplayWeather/DisplayWeather.css
+++ b/app/src/components/DisplayWeather/DisplayWeather.css
@@ -3,9 +3,8 @@
 }
 
 .weather-plot {
-    height: 200px;
-    width: 100%;
-    max-width: 320px;
+    height: 250px;
+    max-width: 100%;
     background-color: var(--neutral-color-xlight);
     margin-bottom: 32px;
 }
