--- a/app/src/components/InputField/Input.css
+++ b/app/src/components/InputField/Input.css
@@ -16,5 +16,5 @@ input:hover {
 .connect-right {
     border-radius: 12px 0 0 12px;
     margin-right: 0;
-    max-width: 70%;
+    max-width: 140px;
 }
