Removed padding from clothes list, adjusted logo positioning.

--- a/app/src/components/ClothesList/ClothTag.css
+++ b/app/src/components/ClothesList/ClothTag.css
@@ -27,6 +27,10 @@ li.show {
   animation-fill-mode: forwards;
 }
 
+ul {
+  padding: 0;
+}
+
 @keyframes fadeIn {
   0% {
     height: 0;
@@ -39,5 +43,3 @@ li.show {
 
   }
 }
-
-
