--- a/app/src/App.css
+++ b/app/src/App.css
@@ -19,7 +19,7 @@
 }
 
 .logo-image {
-  height: 64px;
+  height: 72px;
   max-height: 60%;
   margin-right: 5px;
 }
@@ -35,7 +35,7 @@
   display: flex;
   flex-direction: row;
   align-items: baseline;
-  justify-content: space-around;
+  justify-content: center;
   margin: 18px;
   padding: 12px;
 }
@@ -72,8 +72,8 @@
 }
 
 .oscar {
-  width: 200px;
-  height: auto;
+  width: auto;
+  height: 200px;
 }
 
 .flex-row {
