--- a/app/src/components/DisplayWeather/DisplayWeather.css
+++ b/app/src/components/DisplayWeather/DisplayWeather.css
@@ -1,7 +1,30 @@
 .weather-plot {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    margin: 32px 0;
+    margin: 12px 0;
+}
+
+.recharts-legend-item {
+    overflow: visible;
+    display: block;
+}
+
+.recharts-line-dot {
+    display: none;
+}
+
+.recharts-cartesian-grid-horizontal {
+    color: var(--accent-color-light);
+}
+
+.recharts-tooltip-wrapper {
+    padding: 0 12px;
+    background-color: rgba(0, 0, 0, 0.6);
+    outline: none;
+}
+
+.label#temp {
+    color: #82ca9d;
+}
+
+.label#apparent-temp {
+    color: #8884d8;
 }
