--- a/app/src/App.css
+++ b/app/src/App.css
@@ -52,15 +52,15 @@
   width: 45vw;
   /*vertical-align: middle;*/
   margin: 12px 0;
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 .bottom-row {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: center;
-  align-content: space-between;
-}
+   margin-top: 40px;
+ }
 
 .recommendation {
   display: flex;
@@ -68,7 +68,9 @@
   flex-direction: row;
   align-items: center;
   align-content: center;
+  height: 250px;
   max-width: 480px;
+  margin-bottom: 40px;
 }
 
 .oscar {
