--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,3 +1,6 @@
+
+html,body{
+  height:100%;}
 .App {
   text-align: center;
   width: 100%;
@@ -5,17 +8,37 @@
   background-color: var(--body-background-color);
   position: relative;
   border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 .App-header {
-  height: 120px;
-  padding-top: 12px;
+  height: 20%;
+  padding-top: 3%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
 }
 
-.App-body {
+.toggle-theme{
+
+
+
+}
+
+.app-logo {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: center;
+
+
+
 }
 
 .logo-image {
@@ -31,14 +54,19 @@
   color: var(--sharp-contrast-color-1);
 }
 
-.app-logo {
+
+.App-body {
   display: flex;
-  flex-direction: row;
-  align-items: baseline;
-  justify-content: center;
-  margin: 18px;
-  padding: 12px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 77%;
 }
+
+
+
+
+
 
 .weather-icons .icon {
   color: var(--sharp-contrast-color-2);
@@ -48,35 +76,74 @@
   margin: 0;
 }
 
-.input-and-button {
-  width: 45vw;
-  /*vertical-align: middle;*/
-  margin: 12px 0;
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translate(-50%);
-}
 
-.bottom-row {
-   margin-top: 40px;
- }
 
 .recommendation {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: row;
-  align-items: center;
-  align-content: center;
-  height: 250px;
-  max-width: 480px;
-  margin-bottom: 40px;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  max-height: 30%;
+
+  width: 100%;
+
 }
 
 .oscar {
   width: auto;
-  height: 200px;
+  max-height:100%;
+  flex-shrink: 1;
 }
+
+.clothes-list{
+  /*
+  max-height: 100%;
+  */
+  height:100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 50%;
+
+
+
+
+}
+
+.weather-container{
+  
+  display: flex;
+  align-items: center;
+  flex-grow:1;
+}
+
+
+.bottom-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 2%;
+  padding-top: 2%;
+}
+.toggle-weather-display{
+
+  padding-left: 3%;
+
+}
+.toggle-day{
+  padding-right: 3%;
+
+}
+.input-and-button {
+  width: 45vw;
+
+
+}
+
+
 
 .flex-row {
   flex-direction: row;
