--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,184 +1,169 @@
 
-html,body{
-  height:100%;}
+html, body {
+    height: 100%;
+}
+
 .App {
-  text-align: center;
-  width: 100%;
-  max-width: 480px;
-  background-color: var(--body-background-color);
-  position: relative;
-  border-radius: 12px;
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  height: 100vh;
-  margin: 0;
-  padding: 0;
+    text-align: center;
+    width: 100%;
+    max-width: 480px;
+    background-color: var(--body-background-color);
+    position: relative;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 .App-header {
-  height: 20%;
-  padding-top: 3%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+    height: 20%;
+    padding-top: 3%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 
 }
 
-.toggle-theme{
-
-
-
+.toggle-theme {
 }
 
 .app-logo {
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
-  justify-content: center;
-
-
-
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: center;
 }
 
 .logo-image {
-  height: 72px;
-  max-height: 60%;
-  margin-right: 5px;
+    height: 72px;
+    max-height: 60%;
+    margin-right: 5px;
 }
 
 .logo-text {
-  font-size: 64px;
-  font-family: Baskerville, sans-serif;
-  margin: 0;
-  color: var(--sharp-contrast-color-1);
+    font-size: 64px;
+    font-family: Baskerville, sans-serif;
+    margin: 0;
+    color: var(--sharp-contrast-color-1);
 }
 
 
 .App-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  height: 77%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 77%;
 }
-
-
-
-
-
 
 .weather-icons .icon {
-  color: var(--sharp-contrast-color-2);
-  font-size: var(--font-size-h3);
-  min-height: unset;
-  height: var(--font-size-h3);
-  margin: 0;
+    color: var(--sharp-contrast-color-2);
+    font-size: var(--font-size-h3);
+    min-height: unset;
+    height: var(--font-size-h3);
+    margin: 0;
 }
 
-
-
 .recommendation {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: space-evenly;
-  max-height: 30%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    max-height: 30%;
 
-  width: 100%;
-
+    width: 100%;
 }
 
 .oscar {
-  width: auto;
-  max-height:100%;
-  flex-shrink: 1;
+    width: auto;
+    max-height: 100%;
+    flex-shrink: 1;
 }
 
-.clothes-list{
-  /*
-  max-height: 100%;
-  */
-  height:100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  width: 50%;
-
-
-
-
+.clothes-list {
+    /*
+    max-height: 100%;
+    */
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 50%;
 }
 
-.weather-container{
-  
-  display: flex;
-  align-items: center;
-  flex-grow:1;
+.weather-container {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
 }
 
 
 .bottom-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  padding-bottom: 2%;
-  padding-top: 2%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding-bottom: 2%;
+    padding-top: 2%;
 }
-.toggle-weather-display{
 
-  padding-left: 3%;
+.toggle-weather-display {
 
-}
-.toggle-day{
-  padding-right: 3%;
+    padding-left: 3%;
 
 }
+
+.toggle-day {
+    padding-right: 3%;
+
+}
+
 .input-and-button {
-  width: 45vw;
-
-
+    display: flex;
+    flex-direction: row;
+    width: 55vw;
+    justify-content: space-around;
 }
-
-
 
 .flex-row {
-  flex-direction: row;
+    flex-direction: row;
 }
 
 .hidden {
-  display: none;
+    display: none;
 }
 
 p {
-  font-size: var(--font-size-body);
-  color: var(--body-font-color);
+    font-size: var(--font-size-body);
+    color: var(--body-font-color);
 }
 
 h1 {
-  font-size: var(--font-size-h1);
-  color: var(--h1-color);
-  margin-top: 0;
-  margin-bottom: 48px;
+    font-size: var(--font-size-h1);
+    color: var(--h1-color);
+    margin-top: 0;
+    margin-bottom: 48px;
 }
 
 h2 {
-  font-size: var(--font-size-h2);
-  color: var(--heading-color);
-  margin: 0;
+    font-size: var(--font-size-h2);
+    color: var(--heading-color);
+    margin: 0;
 }
 
 h3 {
-  font-size: var(--font-size-h3);
-  color: var(--heading-color);
-  margin: 0;
+    font-size: var(--font-size-h3);
+    color: var(--heading-color);
+    margin: 0;
 }
 
 h4 {
-  font-size: var(--font-size-h4);
-  color: var(--heading-color);
-  margin: 0;
+    font-size: var(--font-size-h4);
+    color: var(--heading-color);
+    margin: 0;
 }
