--- a/app/src/components/Recommandation/Oscar.css
+++ b/app/src/components/Recommandation/Oscar.css
@@ -1,14 +1,31 @@
 .oscar {
-    height: 100%
+  height: 100%;
 }
 
-.layer-img{
-    position:absolute;
-    max-height: 200px;
-    
+.layer-img {
+  position: absolute;
+  /* max-height: 200px; */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 100%;
+  opacity: 0;
 
-
+  animation-name: fadeInOpp;
+  animation-timing-function: cubic-bezier(0.36, -0.64, 0.34, 1.76);
+  animation-fill-mode: forwards;
 }
-.clothes-layer-container{
-    position: relative;
+.clothes-layer-container {
+  position: relative;
+  width: 50%;
+  height: 100%;
+}
+
+@keyframes fadeInOpp {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
