List and recommendation styling

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,6 +1,7 @@
 
 html, body {
     height: 100%;
+    background: #19334d;
 }
 
 .App {
@@ -70,15 +71,12 @@ html, body {
 .recommendation {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-evenly;
     height: 40%;
-
-    width: 100%;
+    width: 80vw;
+    max-width: 480px;
 }
-
-
-
 
 .weather-container {
     display: flex;
