--- a/app/src/components/ClothesList/ClothesList.css
+++ b/app/src/components/ClothesList/ClothesList.css
@@ -5,7 +5,15 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    width: 50%;
+    min-width: 210px;
+    width: 65%;
+}
+
+@media screen and (max-width: 440px){
+    .clothes-list {
+        align-items: end;
+    }
+
 }
