--- a/app/src/components/ClothesList/ClothTag.css
+++ b/app/src/components/ClothesList/ClothTag.css
@@ -21,6 +21,12 @@
   margin-bottom: 1%;
   color: var(--body-background-color);
 
+/* 
+----center-- text
+  display: flex;
+  justify-content: center;
+  align-items: center; */
+
 
 
 
@@ -45,6 +51,8 @@
 
   }
 }
+
+
 .empty-tag{
   height: 100%;
 
