--- a/app/src/components/ClothesList/ClothTag.css
+++ b/app/src/components/ClothesList/ClothTag.css
@@ -1,6 +1,6 @@
 
 .tag-show:hover{
-  background-color: var(--sharp-contrast-color-2);
+  background-image: var(--tag-linear-gradient-hover);
   cursor: pointer;
 }
 
