--- a/app/src/components/InputField/Input.css
+++ b/app/src/components/InputField/Input.css
@@ -2,13 +2,14 @@ input {
     height: var(--field-min-height);
     background-color: var(--input-field-background-color);
     border-radius: 12px;
-    border: var(--input-field-border);
+    border: none;
     padding: 24px;
     font-size: var(--font-size-input);
     text-align: center;
     box-sizing: border-box;
     outline: none;
     max-width: 180px;
+    box-shadow: var(--input-box-shadow);
 }
 
 input:hover {
