--- a/app/src/components/Modal/Modal.css
+++ b/app/src/components/Modal/Modal.css
@@ -8,10 +8,12 @@ h4 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 10;
+    z-index: 10; 
     background-color: var(--sharp-contrast-color-1);
     border-radius: 12px;
-    padding: 16px;
+    width: 96%;
+    height: 50%;
+    
 
 }
 
@@ -25,17 +27,30 @@ h4 {
 
 .modal-body {
     box-sizing: border-box;
-    padding: 32px;
-    max-height: 50vh;
-    width: calc(2 * 50vh);
-    overflow-y: scroll;
+    /* padding: 32px; */
+    /* max-height: 50vh; */
+    width: 100%;
+    flex-grow: 2;
+    height: auto;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-around;
+
+    /* overflow-y: scroll; */
 }
 
 .btn-group {
     display: flex;
     justify-content: flex-end;
+    
 }
 
 .modal-btn {
     margin: 0 8px;
+}
+.cross:hover
+{
+    background-color: aqua;
+    cursor: pointer;
 }
