--- a/app/src/components/DisplayWeather/DisplayWeather.css
+++ b/app/src/components/DisplayWeather/DisplayWeather.css
@@ -1,7 +1,7 @@
 
 /* Basic weather display */
 .basic-weather-container {
-    width: 80vw;
+    width: 100%;
     height: 230px;
     margin: 16px 0 0;
     background-color: rgba(178, 230, 230, 0.2);
