Change background for light mode

--- a/app/src/theme/variables.css
+++ b/app/src/theme/variables.css
@@ -6,7 +6,7 @@
 
     /* COLORS */
     /* Color scheme */
-    --neutral-color-xlight: whitesmoke;
+    --neutral-color-xlight: #f2f2f2;
     --neutral-color-dark: #1a1a1a;
     --neutral-color-medium: #666666;
     --neutral-color-light: #b3b3b3;
