--- a/app/src/components/Buttons/Button.css
+++ b/app/src/components/Buttons/Button.css
@@ -130,7 +130,7 @@ button:hover {
     color: var(--theme-button-color);
     background-color: transparent;
     position: absolute;
-    margin: 5px;
+    margin: 5px 0 5px 5px;
     padding: 0;
     top: 1%;
     right: 1%;
