--- a/app/src/components/DisplayWeather/DisplayWeather.css
+++ b/app/src/components/DisplayWeather/DisplayWeather.css
@@ -2,7 +2,7 @@
 /* Basic weather display */
 .basic-weather-container {
     width: 100%;
-    height: 230px;
+    height: 220px;
     background-color: rgba(178, 230, 230, 0.2);
 }
 
@@ -23,7 +23,11 @@
     justify-content: flex-end;
 }
 
-.temperatures {
+@media screen and (min-width: 450px) {
+    .inner-container {
+        justify-content: space-around;
+    }
+
 }
 
 .wind-and-rain {
@@ -49,6 +53,10 @@
     padding: 3px 0;
 }
 
+.weather-plot .heading {
+    margin-bottom: 12px;
+}
+
 .basic-weather-container p {
     font-size: 12px;
 }
@@ -67,14 +75,13 @@
 
 .weather-plot {
     width: 100%;
-    height: 230px;
-    margin-bottom: 32px
+    height: 220px;
+    margin-bottom: 32px;
 }
 
 /* Weather plot settings */
 .recharts-legend-item {
     overflow: visible;
-    /*display: block;*/
 }
 
 .recharts-legend-item.legend-item-0 {
