--- a/app/src/App.css
+++ b/app/src/App.css
@@ -3,7 +3,7 @@
 html, body {
     width: 100%;
     height: 100%;
-    background: var(--body-background-color);
+    background: #19334d;
 }
 
 .App {
