--- a/app/src/components/ClothesList/ClothesList.css
+++ b/app/src/components/ClothesList/ClothesList.css
@@ -7,21 +7,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
     min-width: 210px;
     width: 65%;
 }
 
 .modal-image{
-    width: 40%;
+    width: 100%;
 
 }
 .info-text{
-    width: 30%;
-    font-size: larger;
-    text-align: left;
-   
-    /* justify-self: flex-start;  */
+    width: 80%;
+    font-size: var(--font-size-h4);
+    text-align: center;
 }
 
 @media screen and (max-width: 440px){
@@ -29,7 +26,7 @@
         align-items: end;
     }
     .info-text{
-        width: 50%;
+        /*width: 60%;*/
     }
 
 }
