--- a/app/src/components/ClothesList/ClothesList.css
+++ b/app/src/components/ClothesList/ClothesList.css
@@ -12,13 +12,23 @@
 }
 
 .modal-image{
-    width: 100%;
+    height: 100%;
+    max-height: 400px;
+    width: auto;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
 }
 .info-text{
     width: 80%;
     font-size: var(--font-size-h4);
     text-align: center;
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 @media screen and (max-width: 440px){
